--- a/build.gradle
+++ b/build.gradle
@@ -40,14 +40,7 @@ targetCompatibility = '1.7'
 repositories {
 	mavenCentral()
 	maven {
-		url "maven.stardog.com"
-	}
-	maven {
-		url artifactoryUrl
-		credentials {
-			username artifactoryUsername
-			password artifactoryPassword
-		}
+		url "http://maven.stardog.com"
 	}
 }
 
