--- a/build.gradle
+++ b/build.gradle
@@ -27,15 +27,15 @@ sourceSets {
 }
 
 group = "com.complexible.clearbit"
-version = "0.2"
+version = "0.2-SNAPSHOT"
 
 ext {
 	projectDescription = "Java implementation of the Clearbit API"
 	projectUrl = "https://github.com/complexible/clearbit"
 }
 
-sourceCompatibility = '1.8'
-targetCompatibility = '1.8'
+sourceCompatibility = '1.7'
+targetCompatibility = '1.7'
 
 repositories {
 	mavenCentral()
